<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".pages.page5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_times_new_roman"
            android:padding="5dp"
            android:text="@string/page5_1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_constant"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@drawable/img6" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_times_new_roman"
            android:padding="5dp"
            android:text="@string/page5_2"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_constant" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_times_new_roman"
            android:padding="5dp"
            android:text="@string/page5_3"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_constant" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_times_new_roman"
            android:padding="5dp"
            android:text="@string/page5_4"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_constant" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_times_new_roman"
            android:padding="5dp"
            android:text="@string/page5_5"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_constant" />

        <TextView
            android:id="@+id/page5_tv6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_times_new_roman"
            android:padding="5dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_constant" />

        <TextView
            android:id="@+id/page5_tv7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_times_new_roman"
            android:padding="5dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_constant" />
    </LinearLayout>
</ScrollView>
