<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".pages.page3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@fonts/Arial"
            android:padding="5dp"
            android:text="@string/page3_1"
            android:textColor="@android:color/black"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@fonts/Arial"
            android:padding="5dp"
            android:text="@string/page3_2"
            android:textColor="@android:color/black"
            android:textSize="19sp" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@drawable/img4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@fonts/Arial"
            android:padding="5dp"
            android:text="@string/page3_3"
            android:textColor="@android:color/black"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/page3_tv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@fonts/Arial"
            android:padding="5dp"
            android:text="@string/page3_4"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/page3_tv5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@fonts/Arial"
            android:padding="5dp"
            android:text="@string/page3_5"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="19sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>