<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".pages.page6">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@fonts/times-new-roman"
            android:padding="5dp"
            android:text="@string/page6_1"
            android:textColor="@android:color/black"
            android:textSize="21sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@drawable/img7" />

        <TextView
            android:id="@+id/page6_tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@fonts/times-new-roman"
            android:padding="5dp"
            android:textColor="@android:color/black"
            android:textSize="19sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@fonts/times-new-roman"
            android:padding="5dp"
            android:text="@string/page6_3"
            android:textColor="@android:color/black"
            android:textSize="19sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@fonts/times-new-roman"
            android:padding="5dp"
            android:text="@string/page6_4"
            android:textColor="@android:color/black"
            android:textSize="21sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="260dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@drawable/img8" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@fonts/times-new-roman"
            android:padding="5dp"
            android:text="@string/page6_5"
            android:textColor="@android:color/black"
            android:textSize="19sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@fonts/times-new-roman"
            android:padding="5dp"
            android:text="@string/page6_6"
            android:textColor="@android:color/black"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/page6_tv7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@fonts/times-new-roman"
            android:padding="5dp"
            android:textColor="@android:color/black"
            android:textSize="19sp" />
    </LinearLayout>
</ScrollView>