<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".pages.page7">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_times_new_roman"
            android:padding="5dp"
            android:text="@string/page8_1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_constant"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@drawable/img10" />

        <TextView
            android:id="@+id/page8_tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_times_new_roman"
            android:padding="5dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_constant" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_times_new_roman"
            android:padding="5dp"
            android:text="@string/page8_3"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_constant"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/page8_tv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@string/font_times_new_roman"
            android:padding="5dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_constant" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@drawable/img11" />
    </LinearLayout>
</ScrollView>