<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            tools:context=".pages.page1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@fonts/Arial"
                android:padding="5dp"
                android:text="@string/page1_1"
                android:textColor="@android:color/black"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@fonts/Arial"
                android:padding="5dp"
                android:text="@string/page1_2"
                android:textColor="@android:color/black"
                android:textSize="19sp" />
            <ImageView
                android:background="@drawable/img1"
                android:layout_margin="15dp"
                android:layout_gravity="center"
                android:layout_width="150dp"
                android:layout_height="150dp"/>
            <TextView
                android:id="@+id/page1_tv3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@fonts/Arial"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textSize="19sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@fonts/Arial"
                android:padding="5dp"
                android:text="@string/page1_4"
                android:textColor="@android:color/black"
                android:textSize="21sp"
                android:textStyle="bold" />
            <ImageView
                android:layout_margin="15dp"
                android:background="@drawable/img2"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="150dp"/>
            <TextView
                android:id="@+id/page1_tv5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@fonts/Arial"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textSize="19sp" />
            <android.support.constraint.ConstraintLayout
                android:background="@android:color/white"
                android:id="@+id/bottom_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">


                <Button
                    android:id="@+id/page1_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:drawableRight="@drawable/ic_navigate_next_white"
                    android:padding="10dp"
                    android:text="Next"
                    android:textColor="@android:color/white"
                    app:layout_constraintEnd_toEndOf="parent" />
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>